--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>kryonet</groupId>
+            <groupId>com.esotericsoftware</groupId>
             <artifactId>kryonet</artifactId>
-            <version>2.21</version>
+            <version>2.22.0-RC1</version>
         </dependency>
     </dependencies>
 
@@ -109,33 +109,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <!--plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>main.GameManager</mainClass>
-                        </manifest>
-                    </archive>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.0.2</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <mainClass>main.GameManager
-                            </mainClass>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin-->
         </plugins>
     </build>
 
