TextLabels clickable, moved events

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>groupId</groupId>
     <artifactId>Spellbound</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.0-alpha</version>
 
     <repositories>
         <repository>
