--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>main.Launcher</mainClass>
+                                    <mainClass>main.ConsoleLauncher</mainClass>
                                 </transformer>
                             </transformers>
                             <artifactSet>
