Improving project configuration

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@
 # BlueJ files
 *.ctxt
 
+#IntelliJ project configuration files
+*.iml
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
@@ -30,3 +33,4 @@ hs_err_pid*
 
 #target folder
 target/
+/dependency-reduced-pom.xml
