--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,10 @@ language: java
 dist: trusty
 jdk: oraclejdk8
 script: mvn package
+deploy:
+  provider: releases
+  api_key: "$GITHUB_AUTH_TOKEN"
+  file: "target/Spellbound.jar"
+  skip_cleanup: true
+  on:
+    tags: true
