--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,7 @@
                 </executions>
             </plugin>
         </plugins>
+        <finalName>${project.artifactId}</finalName>
     </build>
 
 </project>
